# exa-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/mcp-builder/reference/: evaluation.md  mcp_best_practices.md  python_mcp_server.md  testing_strategy.md
.claude/skills/mcp-builder/scripts/: evaluation.py
.claude/skills/python-uv-dev/scripts/: init_uv_project.py
.github/workflows/: ci.yml
docs/: IMPLEMENTATION-PLAN.md
docs/api-reference/: answer-research-api.md  search-api.md  similar-contents-api.md  websets-api.md
docs/benchmarks/: agent-framework-usage.md  exa-vs-competitors.md  mcp-user-feedback.md
docs/current-mcp/: exa-mcp-server-capabilities.md
docs/plans/active/: session-b-flatten-params.md
docs/sdk/: python-sdk-specification.md
evaluations/: exa_mcp_eval.xml
research/: mcp-testing-best-practices-2025.md  planning.md
research/trends/: mcp-user-feedback.md
src/exa_mcp/: __init__.py  __main__.py  client.py  config.py  constants.py  exceptions.py  server.py
src/exa_mcp/models/: __init__.py  answer.py  common.py  contents.py  research.py  search.py  similar.py
src/exa_mcp/tools/: __init__.py  answer.py  contents.py  research.py  search.py  similar.py
tests/: __init__.py  conftest.py  helpers.py
tests/tools/: __init__.py  test_answer.py  test_contents.py  test_research.py  test_search.py  test_similar.py
