[project]
name = "exa-mcp"
version = "0.1.0"
description = "Enhanced MCP server for Exa AI API with full parameter support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Richard Glaubitz" }]
keywords = ["mcp", "exa", "ai", "search", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.13.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.14.8",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exa_mcp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["exa_mcp"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = false  # FastMCP context returns Any
warn_unused_ignores = false  # Ignore comments may vary by mypy version
disallow_untyped_defs = true

# FastMCP uses dynamic types that don't play well with strict mypy
[[tool.mypy.overrides]]
module = "exa_mcp.tools.*"
disable_error_code = ["type-arg", "arg-type", "no-any-return", "union-attr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]


[project.scripts]
exa-mcp = "exa_mcp.server:main"
